everything works great!

--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
   </div>
 
 
-    <div class="container">
-        <h2>Contact Us</h2>
+    <div class="container card">
+        <h2>Send me an email!</h2>
         <form id="contact-form" action="#" method="POST">
           <div class="form-group">
             <label for="name">Name:</label>
