--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
                 <div class="info"><p>2023 | <span class="blurb">Social recipe site</span></p></div>
               </div>
               <p class="description">Recipe site that allows users to search for recipes based on ingredients and dietary restrictions. Built on the MERN stack for my senior capstone project at MSU denver.</p>
-              <div style="display: flex; justify-content: space-evenly;">
+              <div>
                 <div class="button">
                   <a style="text-decoration: none;" href="https://pantrydev.netlify.app/" target=”_blank”><div style="color: white;">Visit Website</div></a>
                 </div>
