--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Wolfy Fiorini Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css" />
 	<link rel="stylesheet" type="text/css" href="style/home.css" />
+	<link rel="icon" type="image/x-icon" href="assets/favicon-32x32.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type = "text/javascript" src="js/scripts.js"></script>
 </head>
