--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
     <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="style/style.css" />
     <script type = "text/javascript" src="js/scripts.js"></script>
+    <link rel="icon" type="image/x-icon" href="assets/favicon-32x32.png">
+
 
 </head>
 <body>
