--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<h2 id="bio"></h2>
 				<a href="assets/WolfyFiorini_FastTrackResume_Draft2.pdf" target="_blank" class="resume-link"><button>Download Resume</button></a>
 				<div>
-					<a href="https://www.linkedin.com/in/jon-fiorini/" target="_blank" class="icon">
+					<a href="https://www.linkedin.com/in/wolfy-fiorini/" target="_blank" class="icon">
 						<span class="fa fa-linkedin"></span>
 					</a>
 					<a href="https://github.com/Wolfy319" target="_blank" class="icon">
